# bifrost-issue

./: .gitignore  README.md  gemini_file_upload_diagnostic.py  pyproject.toml
cases/anthropic-file-id-openai-route/: README.md  pyproject.toml  repro.py
cases/gemini-file-upload-diagnostic/: README.md
cases/gemini-file-upload-mime-type/: README.md  pyproject.toml  repro.py
cases/solved/gemini-file-upload-diagnostic/: README.md
