[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-file-upload-diagnostic"
version = "0.1.0"
description = "Diagnostic CLI for comparing Gemini File API uploads through Google direct and Bifrost."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiohttp",
    "google-genai",
    "rich",
]

[project.scripts]
gemini-file-upload-diagnostic = "gemini_file_upload_diagnostic:main"

[tool.setuptools]
py-modules = ["gemini_file_upload_diagnostic"]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
